--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="wrapper">
         <h1 id="title">HTML and CSS</h1>
-       <a href="colorPicker.html"> <li>Color Picker</li></a>
+       <a href="src/colorPicker.html"> <li>Color Picker</li></a>
         
        
     </div>
