--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <div id="wrapper">
         <h1 id="title">HTML and CSS</h1>
-       <a href="src/colorPicker.html"> <li>Color Picker</li></a>
+        <ul>
+            <li><a href="src/colorPicker.html"> Color Picker</a></li>
         
-       
+        </ul>
     </div>
 </body>
 </html>
