--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="wrapper">
         <h1 id="title">HTML and CSS</h1>
         <ul>
-            <li><a href="src/colorPicker.html"> Color Picker</a></li>
+            <a href="src/colorPicker.html"><li> Color Picker</li></a>
         
         </ul>
     </div>
