--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="title">HTML and CSS</h1>
         <ul>
             <a href="src/colorPicker.html"><li> Color Picker</li></a>
-        
+            <a href="src/blockquote.html"><li> Blockquote</li></a>
         </ul>
     </div>
 </body>
